# krud-ai

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh  render.yaml  requirements.txt
.github/workflows/: pages.yml  release.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: auth.py  config.py  db.py  limiter.py  security.py  token_budget.py
backend/app/models/: schemas.py
backend/app/services/: billing.py  browser_ui.py  chat.py  device_auth.py  llm.py  pages.py
backend/krud_control_plane.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_app.py
crates/krud-cli/: Cargo.toml
crates/krud-cli/src/: main.rs  rabbit.rs  ui.rs
crates/krud-core/: Cargo.toml
crates/krud-core/src/: lib.rs
crates/krudd/: Cargo.toml
crates/krudd/src/: main.rs
docs/: 404.html  CNAME  architecture.md  cli-auth.html  index.html  install.sh  mvp-runbook.md
docs/assets/: index-C9ATbR5_.js  index-CsuqIoPr.js  index-D-AY-hrk.css  index-DuJ9O4RT.css
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BrandMark.jsx  Layout.jsx  ui.jsx
frontend/src/content/: site.js
frontend/src/pages/: Billing.jsx  Blog.jsx  BlogPost.jsx  CliAuth.jsx  Contact.jsx  Docs.jsx  Features.jsx  Home.jsx  Login.jsx  NotFound.jsx  PaymentSuccess.jsx  Pricing.jsx  Privacy.jsx  Terms.jsx
install/: install.sh
launchd/: in.dabcloud.krudd.plist  in.krud.ai.plist
scripts/: package_release.sh
