[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krud-control-plane"
version = "0.1.0"
description = "Krud AI FastAPI control plane"
requires-python = ">=3.11"
dependencies = [
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "stripe>=11.6,<12.0",
  "uvicorn>=0.32,<1.0",
  "python-multipart>=0.0.18,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
