[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krud-control-plane"
version = "0.1.0"
description = "Krud AI FastAPI control plane"
requires-python = ">=3.11"
dependencies = [
  "email-validator>=2.2,<3.0",
  "sentry-sdk[fastapi]>=2.0,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "psycopg2-binary>=2.9,<3.0",
  "slowapi>=0.1.9,<1.0",
  "dodopayments==1.87.2",
  "uvicorn>=0.32,<1.0",
  "python-multipart>=0.0.18,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
